fix: trends overflow and title word-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -100,8 +100,9 @@ img {
 
 .header__inner {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
+    position: relative;
 }
 
 /* ===== Logo ===== */
@@ -109,7 +110,7 @@ img {
 
 .logo img {
     display: block;
-    width: 269px;
+    width: 100%;
     height: auto;
 
 }
@@ -117,7 +118,8 @@ img {
 .logo {
     display: block;
     max-width: 269px;
-    margin: 222px auto 0 27px;
+    width: 90%;
+    margin: 220px auto 0;
 }
 
 /* ===== Menu ===== */
@@ -201,8 +203,10 @@ img {
     font-size: 16px;
     margin-bottom: 24px;
     font-weight: 700;
-    margin-left: 107px;
-    margin-right: 0;
+    margin-left: 0;
+    text-align: center;
+    width: 100%;
+    padding: 0 15px;
 }
 
 .trends__title::after {
@@ -211,7 +215,7 @@ img {
     width: 65px;
     height: 3px;
     background-color: #b59f5b;
-    margin: 7px 40px 0;
+    margin: 7px auto 0;
 }
 
 .trends__items {
@@ -261,7 +265,7 @@ img {
     margin: 14px;
     padding: 24px 19px 18px;
     border: 3px solid rgba(181, 159, 91, 0.6);
-    width: 100%;
+    width: calc(100% - 28px);
     box-sizing: border-box;
 }
 
@@ -291,6 +295,12 @@ img {
     line-height: 1.65;
     text-transform: uppercase;
     font-weight: 700;
+
+    display: block;
+    width: 100%;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    text-align: left;
 }
 
 .trend__title a {
@@ -313,13 +323,13 @@ img {
 /* ===== Post ===== */
 
 .post {
-    display: block;
+    display: flex;
     flex-direction: column;
     margin-bottom: 35px;
     padding-bottom: 25px;
     position: relative;
     width: 100%;
-    min-width: 330px;
+    min-width: 0;
 }
 
 .post::after {
@@ -675,7 +685,7 @@ img {
 
 .product {
     width: 100%;
-    min-width: 330px;
+    min-width: 0;
     margin: 0 auto 30px;
     display: flex;
     flex-direction: column;
@@ -1292,22 +1302,25 @@ img {
     .trend {
         width: calc(50% - 2px);
         min-height: 247px;
+        height: auto;
         position: relative;
         overflow: hidden;
+        display: flex;
     }
 
     .trend__content {
-        position: absolute;
+        position: relative;
         margin: 17px;
         padding-top: 28px;
         padding-left: 32px;
         padding-right: 20px;
-        width: calc(100% - 30px);
+        width: calc(100% - 34px);
         box-sizing: border-box;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
+        max-height: calc(100% - 34px);
     }
 
     .trend__tags {
@@ -1349,7 +1362,13 @@ img {
         line-height: 1.3;
         color: #ffffff;
         text-transform: uppercase;
-        margin-bottom: 10px
+        margin-bottom: 10px;
+        display: block;
+        width: 100%;
+        white-space: normal;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        word-break: normal;
     }
 
     .products {
@@ -1756,6 +1775,10 @@ img {
         margin: 20px;
         padding: 30px 32px 27px;
         width: calc(100% - 40px);
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        min-height: auto;
     }
 
     .trends__title {
@@ -1774,6 +1797,11 @@ img {
     .trend__title {
         font-size: 20px;
         margin-bottom: 0;
+        display: block;
+        width: 100%;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        white-space: normal;
     }
 
     .trend__tags {
